MDEV-32022 ERROR 1054 (42S22): Unknown column 'X' in 'NEW' in trigger

add missing do_get_copy/do_build_clone